# ajhc

./: .gitignore  .travis.yml  ANSI.hs  ArbitraryInstances.hs  Atom.hs  Binary.hs  COPYING  CanType.hs  CharIO.hs  DDataUtil.hs  DataConstructors.hs  DataConstructors.hs-boot  FastMutInt.hs  FilterInput.hs  FindFixpoint.hs  Fixer.hs  FixpointFinder.hs  FlagDump.flags  FlagOpts.flags  FreeVars.hs  GenUtil.hs  GraphUtil.hs  HasSize.hs  HelloWorld.hs  Ho.hs  Info.hs  Interactive.hs  Main.hs  Makefile  Makefile.am  Makefile.cabalinst  Makefile.cabalinst.in  MapBinaryInstance.hs  MonadUtil.hs  MonoidUtil.hs  Name.hs  NameMonad.hs  Number.hs  Options.hs  PackedString.hs  (+29 more)
C/: Arch.hs  FFI.hs  FromGrin.hs  FromGrin2.hs  Gen.hs  Generate.hs  Op.hs  OpEval.hs  Prims.hs
Cmm/: Op.hs  OpEval.hs
DerivingDrift/: DataP.hs  Drift.hs  RuleFunctorM.hs  RuleMonoid.hs  RuleUtility.hs  RuleUtils.hs  StandardRules.hs  UserRuleBinary.hs  UserRuleGhcBinary.hs  (+3 more)
E/: E.hs  (+35 more)
lib/: Array.hs  Char.hs  Complex.hs  Data.Dynamic.hs  Data.IORef.hs  Data.Typeable.hs  Data.Unicode.hs  Directory.hs  IO.hs  Ix.hs  Jhc.Addr.hs  Jhc.Array.hs  Jhc.Handle.hs  Jhc.IO.hs  Jhc.Inspection.hs  Jhc.Tuples.hs  LICENSE  List.hs  Locale.hs  Maybe.hs  Monad.hs  Numeric.hs  Prelude.Float.hs  Prelude.IO.hs  Prelude.IOError.hs  Prelude.Ratio.hs  Prelude.Text.hs  Prelude.hs  Random.hs  Ratio.hs  System.hs  Time.hs  base.cabal  containers.cabal  haskell98.cabal
lib/Control/: Monad.hs
lib/Data/: Bits.hs  Char.hs  IORef.hs  Int.hs  List.hs  Unicode.hs  Word.hs
lib/Foreign/: Ptr.hs
lib/Foreign/C/: Error.hs  OldString.hs  String.hs
lib/Foreign/Marshal/: Alloc.hs  Array.hs  Error.hs  Utils.hs
lib/Jhc/: Array.hs  Hole.hs  IO.hs  JumpPoint.hs
lib/Prelude/: IO.hs
lib/System/: IO.Binary.hs
lib/System/Console/: GetOpt.hs
lib/System/IO/: Continuation.hs
lib/Test/: QuickCheck.hs
lib/Test/QuickCheck/: Batch.hs  Poly.hs  Utils.hs
lib/applicative/: applicative.cabal  applicative.yaml
lib/applicative/Control/: Applicative.hs  Arrow.hs  Category.hs
lib/applicative/Data/: Foldable.hs  Traversable.hs
lib/base/: Array.hs  Foreign.hs  Locale.hs  Maybe.hs  Numeric.hs  Prelude.hs  System.hs  base.cabal  base.yaml
lib/base/Control/: Exception.hs  Monad.hs
lib/base/Control/Monad/: Fix.hs  Instances.hs
lib/base/Data/: Array.hs  Bits.hs  Bits.m4  Char.hs  Complex.hs  Dynamic.hs  Function.hs  Functor.hs  IORef.hs  Int.hs  Ix.hs  List.hs  Maybe.hs  Monoid.hs  Ratio.hs  Typeable.hs  Unique.hs  Version.hs
lib/base/Data/Array/: IO.hs  Unboxed.hs
lib/base/Debug/: Trace.hs
lib/base/Foreign/: C.hs  ForeignPtr.hs  Marshal.hs  Ptr.hs  StablePtr.hs  Storable.hs  Storable.m4
lib/base/Foreign/C/: Error.hs  String.hs
lib/base/Foreign/Marshal/: Alloc.hs  Array.hs  Error.hs  Pool.hs  Utils.hs
lib/base/Jhc/: ACIO.hs  Addr.hs  Array.hs  Basics.hs  Enum.hs  Float.hs  Handle.hs  Hole.hs  IO.hs  IOArray.hs  Inspection.hs  Int.hs  JumpPoint.hs  List.hs  Maybe.hs  Monad.hs  Num.hs  Options.hs  Order.hs  Order.m4  Prim.hs  String.hs  Tuples.hs
lib/base/Jhc/Inst/: Enum.hs  PrimEnum.hs  Read.hs  Show.hs  Storable.hs
lib/base/Prelude/: Float.hs  IO.hs  IOError.hs  Ratio.hs  Text.hs
lib/base/System/: CPUTime.hs  Cmd.hs  Directory.hs  Environment.hs  Exit.hs  IO.hs  Info.hs  Info.hs.in  Locale.hs  Random.hs  Time.hs
lib/base/System/IO/: Binary.hs  Error.hs
lib/base/Text/: Printf.hs
lib/base/Text/Show/: Functions.hs
lib/base/Unsafe/: Coerce.hs
lib/ext/: Diff.cabal  Diff.yaml  HUnit.cabal  HUnit.yaml  QuickCheck.cabal  QuickCheck.yaml  bytestring.patch  bytestring.yaml  containers.cabal  containers.patch  containers.yaml  dataenc.yaml  deepseq.cabal  deepseq.yaml  filepath.cabal  filepath.yaml  html.cabal  html.yaml  parsec.cabal  parsec.yaml  pretty.cabal  pretty.yaml  safe.cabal  safe.yaml  smallcheck.cabal  smallcheck.patch  smallcheck.yaml  transformers.cabal  transformers.yaml  utility-ht.cabal  utility-ht.yaml  wl-pprint.yaml  xhtml.cabal  xhtml.yaml
lib/flat-foreign/: MarshalError.hs  flat-foreign.cabal  flat-foreign.yaml
lib/haskell-extras/: Foreign.hs  Prelude.hs  Typeable.hs  haskell-extras.yaml.m4
lib/haskell-extras/Control/: Concurrent.hs
lib/haskell-extras/Control/Monad/: Fix.hs  Instances.hs
lib/haskell-extras/Data/: Bits.hs  Bits.m4  Complex.hs  Dynamic.hs  Functor.hs  IORef.hs  Ix.hs  Maybe.hs  Monoid.hs  Typeable.hs  Unicode.hs  Unique.hs
lib/haskell-extras/Debug/: Trace.hs
lib/haskell-extras/Foreign/: ForeignPtr.hs  StablePtr.hs
lib/haskell-extras/System/: CPUTime.hs  Cmd.hs  Directory.hs  Environment.hs  IO.hs  Info.hs  Locale.hs  Random.hs  Time.hs
lib/haskell-extras/System/Console/: GetOpt.hs
lib/haskell-extras/System/IO/: Binary.hs  Pipe.hs
lib/haskell-extras/Text/: Printf.hs
lib/haskell2010/: haskell2010.yaml.m4
lib/haskell98/: Char.hs  Complex.hs  Directory.hs  IO.hs  Locale.hs  System.hs  haskell98.cabal  haskell98.yaml
lib/jhc/: Numeric.hs  Prelude.hs  jhc.cabal  jhc.yaml
lib/jhc-prim/: jhc-prim.cabal  jhc-prim.yaml
lib/jhc-prim/Jhc/: Prim.hs
lib/jhc-prim/Jhc/Prim/: Array.hs  Basics.hs  Bits.hs  IO.hs  List.hs  Options.hs  Prim.hs  Rts.hs  Words.hs  Wrapper.hs
lib/jhc/Data/: Char.hs  Int.hs  Ratio.hs  String.hs  Word.hs
lib/jhc/Foreign/: Ptr.hs  Storable.hs  Storable.m4
lib/jhc/Foreign/C/: Error.hs  String.hs  Types.hs
lib/jhc/Foreign/Marshal/: Alloc.hs  Array.hs  Utils.hs
lib/jhc/Jhc/: ACIO.hs  Addr.hs  Array.hs  Basics.hs  Enum.hs  Enum.m4  Float.hs  ForeignPtr.hs  Handle.hs  Hole.hs  IO.hs  Int.hs  JumpPoint.hs  List.hs  Maybe.hs  Monad.hs  Num.hs  Num.m4  Numeric.hs  Options.hs  Order.hs  Order.m4  Prim.hs  Show.hs  String.hs  Tuples.hs  Types.hs
lib/jhc/Jhc/Class/: Num.hs  Ord.hs  Real.hs
lib/jhc/Jhc/Inst/: Enum.hs  Num.hs  Order.hs  PrimEnum.hs  Read.hs  Show.hs  Storable.hs
lib/jhc/Jhc/Text/: Read.hs
lib/jhc/Jhc/Type/: Basic.hs  C.hs  Float.hs  Handle.hs  Ptr.hs  Word.hs
lib/jhc/Prelude/: CType.hs  Float.hs  IO.hs  Text.hs
lib/jhc/System/: Mem.hs
lib/jhc/System/C/: Stdio.hs
lib/jhc/System/IO/: Unsafe.hs
lib/jhc/System/Mem/: StableName.hs
(+756 files in other folders)
